@@ -15,6 +15,7 @@ deps =
     coverage
     pytest
     pytest-cov
+    pytest-catchlog
     mock
 
 install_command = pip install -r requirements.txt -U {opts} {packages}
